--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,7 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
     %meta{:charset => "utf-8"}
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %title kiwIT.net di Francesco Ing. Gianni
     %meta{:name => "description", :content => "Information Technology & Web Engineering. Diamo forma ai tuoi progetti sul web."}
     %meta{:name => "author", :content => ""}
