--- a/views/index.haml
+++ b/views/index.haml
@@ -2,10 +2,10 @@
   .container
     .row.rel
       %a{:href => "/about"}
-        %img#about{:src => "img/about.png",
+        %img#about{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/about.png",
                  :alt => "portrait"}
       .offset3.span6
-        %img.center{:src => "img/logo.png",
+        %img.center{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/logo.png",
                 :alt => "kiwit_logo"}
         %h1.logo_font
           %span#kiw Kiw
