--- a/views/tech.haml
+++ b/views/tech.haml
@@ -2,7 +2,7 @@
   .container
     .row.rel
       .offset3.span6
-        %img.center{:src => "img/logo.png",
+        %img.center{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/logo.png",
                     :alt => "kiwit_logo"}
         %h1.logo_font
           %span#kiw Kiw
@@ -38,7 +38,7 @@
         %li.span3
           %a{ :href => '//www.ruby-lang.org',
               :target => '_blank' }
-            %img.center#ruby{:src => "img/transparent.png",
+            %img.center#ruby{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "ruby_logo",
                            'data-content' => "#{t.tech.ruby}",
                            :rel => "popover",
@@ -47,7 +47,7 @@
         %li.span3
           %a{ :href => '//www.python.org',
               :target => '_blank' }
-            %img.center#python{:src => "img/transparent.png",
+            %img.center#python{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "python_logo",
                            'data-content' => "#{t.tech.python}",
                            :rel => "popover",
@@ -57,7 +57,7 @@
         %li.span3
           %a{ :href => '//www.php.net',
               :target => '_blank' }
-            %img.center#php{:src => "img/transparent.png",
+            %img.center#php{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "php_logo",
                            'data-content' => "#{t.tech.php}",
                            :rel => "popover",
@@ -66,7 +66,7 @@
         %li.span3
           %a{ :href => '//www.java.com',
               :target => '_blank' }
-            %img.center#java{:src => "img/transparent.png",
+            %img.center#java{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "java_logo",
                            'data-content' => "#{t.tech.java}",
                            :rel => "popover",
@@ -79,7 +79,7 @@
         %li.span3
           %a{ :href => '//rubyonrails.org',
               :target => '_blank' }
-            %img.center#rails{:src => "img/transparent.png",
+            %img.center#rails{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "rails_logo",
                            'data-content' => "#{t.tech.rails}",
                            :rel => "popover",
@@ -89,7 +89,7 @@
         %li.span3
           %a{ :href => '//www.sinatrarb.com',
               :target => '_blank' }
-            %img.center#sinatra{:src => "img/transparent.png",
+            %img.center#sinatra{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "sinatra_logo",
                            'data-content' => "#{t.tech.sinatra}",
                            :rel => "popover",
@@ -98,7 +98,7 @@
         %li.span3
           %a{ :href => '//www.nginx.com',
               :target => '_blank' }
-            %img.center#nginx{:src => "img/transparent.png",
+            %img.center#nginx{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "nginx_logo",
                            'data-content' => "#{t.tech.nginx}",
                            :rel => "popover",
@@ -107,7 +107,7 @@
         %li.span3
           %a{ :href => '//www.symfony.com',
               :target => '_blank' }
-            %img.center#symfony{:src => "img/transparent.png",
+            %img.center#symfony{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "symfony_logo",
                            'data-content' => "#{t.tech.symfony}",
                            :rel => "popover",
@@ -119,7 +119,7 @@
         %li.span3
           %a{ :href => '//www.postgresql.org',
               :target => '_blank' }
-            %img.center#postgresql{:src => "img/transparent.png",
+            %img.center#postgresql{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "postgresql_logo",
                            'data-content' => "#{t.tech.postgresql}",
                            :rel => "popover",
@@ -128,7 +128,7 @@
         %li.span3
           %a{ :href => '//www.mysql.com',
               :target => '_blank' }
-            %img.center#mysql{:src => "img/transparent.png",
+            %img.center#mysql{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "mysql_logo",
                            'data-content' => "#{t.tech.mysql}",
                            :rel => "popover",
@@ -137,7 +137,7 @@
         %li.span3
           %a{ :href => '//www.sqlite.org',
               :target => '_blank' }
-            %img.center#sqlite{:src => "img/transparent.png",
+            %img.center#sqlite{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "sqlite_logo",
                            'data-content' => "#{t.tech.sqlite}",
                            :rel => "popover",
@@ -146,7 +146,7 @@
         %li.span3
           %a{ :href => '//www.mongodb.org',
               :target => '_blank' }
-            %img.center#mongodb{:src => "img/transparent.png",
+            %img.center#mongodb{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "mongodb_logo",
                            'data-content' => "#{t.tech.mongodb}",
                            :rel => "popover",
@@ -159,7 +159,7 @@
         %li.span3
           %a{ :href => '//www.google.com/webmasters/tools',
               :target => '_blank' }
-            %img.center#google{:src => "img/transparent.png",
+            %img.center#google{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "google_logo",
                            'data-content' => "#{t.tech.google}",
                            :rel => "popover",
@@ -168,7 +168,7 @@
         %li.span3
           %a{ :href => '//www.w3.org/html',
               :target => '_blank' }
-            %img.center#html5{:src => "img/transparent.png",
+            %img.center#html5{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "html5_logo",
                            'data-content' => "#{t.tech.html5}",
                            :rel => "popover",
@@ -177,7 +177,7 @@
         %li.span3
           %a{ :href => '//jquery.com',
               :target => '_blank' }
-            %img.center#jquery{ :src => "img/transparent.png",
+            %img.center#jquery{ :src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "jquery_logo",
                            'data-content' => "#{t.tech.jquery}",
                            :rel => "popover",
@@ -187,7 +187,7 @@
         %li.span3
           %a{ :href => '//lucene.apache.org/solr',
               :target => '_blank' }
-            %img.center#solr{ :src => "img/transparent.png",
+            %img.center#solr{ :src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "solr_logo",
                            'data-content' => "#{t.tech.solr}",
                            :rel => "popover",
@@ -200,7 +200,7 @@
         %li.span3
           %a{ :href => '//heroku.com',
               :target => '_blank' }
-            %img.center#heroku{ :src => "img/transparent.png",
+            %img.center#heroku{ :src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "heroku_logo",
                            'data-content' => "#{t.tech.heroku}",
                            :rel => "popover",
@@ -209,7 +209,7 @@
         %li.span3
           %a{ :href => '//aws.amazon.com/',
               :target => '_blank' }
-            %img.center#amazon{:src => "img/transparent.png",
+            %img.center#amazon{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "amazon_logo",
                            'data-content' => "#{t.tech.amazon}",
                            :rel => "popover",
@@ -218,7 +218,7 @@
         %li.span3
           %a{ :href => '//www.linode.com/',
               :target => '_blank' }
-            %img.center#linode{:src => "img/transparent.png",
+            %img.center#linode{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "linode_logo",
                            'data-content' => "#{t.tech.linode}",
                            :rel => "popover",
@@ -227,7 +227,7 @@
         %li.span3
           %a{ :href => '//www.artera.it',
               :target => '_blank' }
-            %img.center#artera{:src => "img/transparent.png",
+            %img.center#artera{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/transparent.png",
                            :alt => "artera_logo",
                            'data-content' => "#{t.tech.artera}",
                            :rel => "popover",
