--- a/views/about.haml
+++ b/views/about.haml
@@ -2,7 +2,7 @@
   .container
     .row.rel
       .offset3.span6
-        %img.center{:src => "img/logo.png",
+        %img.center{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/logo.png",
                 :alt => "kiwit_logo"}
         %h1.logo_font
           %span#kiw Kiw
@@ -18,7 +18,7 @@
   .row
     .offset2.span8
 
-      %img.thumbnail.center{:src => "img/ritratto.jpg",
+      %img.thumbnail.center{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/ritratto.jpg",
                   :alt => "ritratto"}
 
       %h2
