--- a/views/development.haml
+++ b/views/development.haml
@@ -2,7 +2,7 @@
   .container
     .row.rel
       .offset3.span6
-        %img.center{:src => "img/logo.png",
+        %img.center{:src => "https://s3-eu-west-1.amazonaws.com/kiwit.net/logo.png",
                 :alt => "kiwit_logo"}
         %h1.logo_font
           %span#kiw Kiw
