--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,7 +19,7 @@
     %link{ :href => "/bootstrap/css/bootstrap-responsive.min.css", :rel => "stylesheet" }	
 
     / Le fav and touch icons
-    %link{ rel: "shortcut icon", href: "/img/favicon.ico"}
+    %link{ rel: "shortcut icon", href: "https://s3-eu-west-1.amazonaws.com/kiwit.net/favicon.ico"}
 
   %body
 
