ADD: dynamic copyright year

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,3 +1,3 @@
 .footer
   %p
-    &copy; Kiwit 2014 di Francesco Ing. Gianni - P.IVA 06629290963
+    &copy; Kiwit #{Time.now.year} di Francesco Ing. Gianni - P.IVA 06629290963
